update periode tussenversie (1)
